# user-service-backend

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yaml
migrations/2022-01-04-214903_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  user_api.rs
